fixed: print PDF long string(s) in text field overlaps (#694), closes #166

--- a/src/sass/core/_print.scss
+++ b/src/sass/core/_print.scss
@@ -455,3 +455,24 @@ h4 {
         }
     }
 }
+
+.or-text-print-initialized {
+    input {
+        &[type=text] {
+            display: none;
+        }
+    }
+
+    .print-input-text {
+        font-weight: normal;
+        font-size: 12px;
+        width: 80%;
+        padding: 6px 12px;
+        border-bottom: 1px solid black;
+    }
+
+    .print-only {
+        display: inline-block;
+        page-break-inside: avoid;
+    }
+}
