--- a/src/widget/text-print/text-print.scss
+++ b/src/widget/text-print/text-print.scss
@@ -1,21 +1,3 @@
-@media print {
-    .or-text-print-initialized {
-        input {
-            &[type=text] {
-                display: none;
-            }
-        }
-
-        .print-input-text {
-            font-weight: normal;
-            font-size: 12px;
-            width: 80%;
-            padding: 6px 12px;
-            border-bottom: 1px solid black;
-        }
-    }
-}
-
 @media screen {
     .or-text-print-initialized {
         .print-only {
